add takeover to disable ambari push